Update SQL script handling and improve project configuration
- Modified `.gitignore` to exclude `.code-workspace` files for better IDE management.
- Enhanced `pom.xml` by adding JUnit dependencies for improved testing capabilities.
- Updated `README.md` to clarify project analysis tools and best practices.
- Improved database initialization scripts with error handling and schema validation checks.
- Refactored SQL script parsing logic to enhance error reporting and streamline execution.
- Cleaned up unnecessary comments and improved formatting in SQL scripts for better readability.